title for heatmap

--- a/cardio_detection.ipynb
+++ b/cardio_detection.ipynb
@@ -592,6 +592,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(7,7))\n",
+    "plt.title(\"heat map for correlation\")\n",
     "sb.heatmap(df.corr(),annot=True,fmt='.0%')"
    ]
   },
