--- a/cardio_detection.ipynb
+++ b/cardio_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "0.8256097560975609"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,18 +322,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8658536585365854"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Sreeahk\\OneDrive\\Documents\\bmsit\\web_dev\\microsoft_internship\\cardio_detection.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Sreeahk/OneDrive/Documents/bmsit/web_dev/microsoft_internship/cardio_detection.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sv\u001b[39m=\u001b[39mSVC()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Sreeahk/OneDrive/Documents/bmsit/web_dev/microsoft_internship/cardio_detection.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m sv\u001b[39m.\u001b[39mfit(X_train,Y_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Sreeahk/OneDrive/Documents/bmsit/web_dev/microsoft_internship/cardio_detection.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m sv\u001b[39m.\u001b[39mscore(X_test,Y_test)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
     }
    ],
    "source": [
@@ -344,16 +345,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8682926829268293"
+       "0.8548780487804878"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,16 +377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8971428571428571"
+       "0.896904761904762"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,32 +420,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[45. 90. 90. 90.  1.  0.  1.  1.  2.  1.  2.  2.  1.]\n"
+      "[ 58. 100. 248. 122.   1.   0.   0.   0.   0.   0.   1.   0.   2.]\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'predict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Sreeahk\\OneDrive\\Documents\\bmsit\\web_dev\\microsoft_internship\\cardio_detection.ipynb Cell 16\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Sreeahk/OneDrive/Documents/bmsit/web_dev/microsoft_internship/cardio_detection.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39marray([\u001b[39m45.\u001b[39m, \u001b[39m90.\u001b[39m, \u001b[39m90.\u001b[39m, \u001b[39m90.\u001b[39m,  \u001b[39m1.\u001b[39m,  \u001b[39m0.\u001b[39m,  \u001b[39m1.\u001b[39m,  \u001b[39m1.\u001b[39m,  \u001b[39m2.\u001b[39m,  \u001b[39m1.\u001b[39m,  \u001b[39m2.\u001b[39m,  \u001b[39m2.\u001b[39m,  \u001b[39m1.\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Sreeahk/OneDrive/Documents/bmsit/web_dev/microsoft_internship/cardio_detection.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(x)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Sreeahk/OneDrive/Documents/bmsit/web_dev/microsoft_internship/cardio_detection.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m rfm\u001b[39m.\u001b[39;49mpredict(x)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'predict'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([1], dtype=int64)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x=np.array([45., 90., 90., 90.,  1.,  0.,  1.,  1.,  2.,  1.,  2.,  2.,  1.])\n",
-    "print(x)\n",
-    "rfm.predict(x)\n"
+    "x=np.array([[58., 100., 248., 122.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  2.]])\n",
+    "print(x[0])\n",
+    "rfc.predict(x)\n"
    ]
   },
   {
